<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.detail.DetailNGD">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head_ngd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/back_up"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:layout_marginTop="11dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:drawableLeft="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:text="@string/tv_detail_ngd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_up"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conten_ngd"
        android:layout_width="378dp"
        android:layout_height="670dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_ngd"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/img_kgd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/img_kgd"
            android:src="@drawable/ic_kgd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_detail_kgd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_sans"
            android:text="@string/detail_kgd"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_kgd"
            app:layout_constraintTop_toBottomOf="@+id/txt_kgd" />

        <TextView
            android:id="@+id/txt_kgd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/head_kgd"
            android:textColor="@color/grey_text_btn"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_kgd"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/call_kgd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/white"
            android:contentDescription="call"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@+id/txt_detail_kgd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.818"
            app:layout_constraintStart_toEndOf="@+id/txt_kgd"
            app:layout_constraintTop_toTopOf="@+id/txt_kgd"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/img_dvider1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/devider"
            android:src="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_detail_kgd" />

        <ImageView
            android:id="@+id/img_pill"
            android:layout_width="56dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_kgd"
            android:src="@drawable/ic_pill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dvider1" />

        <TextView
            android:id="@+id/txt_pill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/head_pil"
            android:textColor="@color/grey_text_btn"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_pill"
            app:layout_constraintTop_toBottomOf="@+id/img_dvider1" />

        <TextView
            android:id="@+id/txt_detail_pil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_sans"
            android:text="@string/detail_sentera"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_pill"
            app:layout_constraintTop_toBottomOf="@+id/txt_pill" />

        <ImageButton
            android:id="@+id/call_pil"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="call_sik"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@+id/txt_detail_pil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dvider1"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/img_dvider2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/devider"
            android:src="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_detail_pil" />

        <ImageView
            android:id="@+id/img_pmi"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_pmi"
            android:src="@drawable/ic_pmi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dvider2" />

        <TextView
            android:id="@+id/txt_pmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/head_pmi"
            android:textColor="@color/grey_text_btn"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_pmi"
            app:layout_constraintTop_toBottomOf="@+id/img_dvider2" />

        <TextView
            android:id="@+id/txt_detail_pmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_sans"
            android:text="@string/detail_pmi"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_pmi"
            app:layout_constraintTop_toBottomOf="@+id/txt_pmi" />

        <ImageButton
            android:id="@+id/call_pmi"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="call_pmi"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@+id/txt_detail_pmi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_pmi"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/img_dvider3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/devider"
            android:src="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_detail_pmi" />

        <ImageView
            android:id="@+id/img_cs"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/img_cs"
            android:src="@drawable/img_callcenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dvider3"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txt_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/head_cs"
            android:textColor="@color/grey_text_btn"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_cs"
            app:layout_constraintTop_toBottomOf="@+id/img_dvider3" />

        <TextView
            android:id="@+id/txt_detail_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_sans"
            android:text="@string/detail_cs"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_cs"
            app:layout_constraintTop_toBottomOf="@+id/txt_cs" />

        <ImageButton
            android:id="@+id/call_cs"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="call_cs"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@+id/txt_detail_cs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_cs"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
